fixed weird overflow thing

--- a/frontend/website/monthlymusicrecap/src/app/features/home-page/home-page.component.scss
+++ b/frontend/website/monthlymusicrecap/src/app/features/home-page/home-page.component.scss
@@ -1,7 +1,7 @@
 .homepage-container{
     background-color: var(--main-color);
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,7 +10,8 @@
     color: var(--text-color);
     font-size: clamp(20px, 2vw, 100px);
     overflow-y: scroll;
-    
+    padding-top: 50px;
+
 }
 
 .description-text{
